# xatlas

./: .gitignore  CMakeLists.txt  README.md  xatlas.cpp  xatlas.h  xatlas_c.h
.github/workflows/: build.yml
examples/: CMakeLists.txt  example_c99.c
tests/: CMakeLists.txt  test.cpp
